--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
   <script>
     //Replace with your config data
     var firebaseConfig = {
-      apiKey: "AIzaSyBuLZkKtrj18LzuVsvSstnnQuLbSp5lqFA",
+      apiKey: process.env.FIREBASE_API_KEY,
       authDomain: "ecstatic-design-399511.firebaseapp.com",
       projectId: "ecstatic-design-399511",
       storageBucket: "ecstatic-design-399511.appspot.com",
