--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
       authDomain: "ecstatic-design-399511.firebaseapp.com",
       projectId: "ecstatic-design-399511",
       storageBucket: "ecstatic-design-399511.appspot.com",
-      messagingSenderId: "859395045927",
-      appId: "1:859395045927:web:c2b790e235d26a81df6c02"
+      messagingSenderId: process.env.FIREBASE_MESSAGING_SENDER_ID,
+      appId: process.env.FIREBASE_APP_ID
     };
       
     // Initialize Firebase
