--- a/index.html
+++ b/index.html
@@ -62,11 +62,12 @@
     //Replace with your config data
     var firebaseConfig = {
       apiKey: process.env.FIREBASE_API_KEY,
-      authDomain: "ecstatic-design-399511.firebaseapp.com",
-      projectId: "ecstatic-design-399511",
-      storageBucket: "ecstatic-design-399511.appspot.com",
+      authDomain: process.env.FIREBASE_AUTH_DOMAIN,
+      projectId: process.env.FIREBASE_PROJECT_ID,
+      storageBucket: process.env.FIREBASE_STORAGE_BUCKET,
       messagingSenderId: process.env.FIREBASE_MESSAGING_SENDER_ID,
       appId: process.env.FIREBASE_APP_ID
+
     };
       
     // Initialize Firebase
