--- a/index.html
+++ b/index.html
@@ -61,13 +61,12 @@
   <script>
     //Replace with your config data
     var firebaseConfig = {
-      apiKey: process.env.FIREBASE_API_KEY,
-      authDomain: process.env.FIREBASE_AUTH_DOMAIN,
-      projectId: process.env.FIREBASE_PROJECT_ID,
-      storageBucket: process.env.FIREBASE_STORAGE_BUCKET,
-      messagingSenderId: process.env.FIREBASE_MESSAGING_SENDER_ID,
-      appId: process.env.FIREBASE_APP_ID
-
+      apiKey: "AIzaSyBuLZkKtrj18LzuVsvSstnnQuLbSp5lqFA",
+      authDomain: "ecstatic-design-399511.firebaseapp.com",
+      projectId: "ecstatic-design-399511",
+      storageBucket: "ecstatic-design-399511.appspot.com",
+      messagingSenderId: "859395045927",
+      appId: "1:859395045927:web:c2b790e235d26a81df6c02"
     };
       
     // Initialize Firebase
